[gd_scene load_steps=4 format=3 uid="uid://bl8pe7yyn8i75"]

[ext_resource type="Script" uid="uid://cxrqadkyju2fa" path="res://scripts/Card.gd" id="1_npm44"]
[ext_resource type="FontFile" uid="uid://cw6j0eugbiyjx" path="res://fonts/OpenChessFont.ttf" id="2_ui4ow"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_p0vlq"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_npm44")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(512, 800)
layout_mode = 1
offset_right = 512.0
offset_bottom = 800.0
mouse_filter = 1

[node name="Image" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 96.0
offset_right = 486.0
offset_bottom = 784.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("CompressedTexture2D_p0vlq")
stretch_mode = 5

[node name="SubtypeImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 96.0
offset_right = 486.0
offset_bottom = 784.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("CompressedTexture2D_p0vlq")
stretch_mode = 5

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_right = 166.0
offset_bottom = 32.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Card Name"

[node name="Type" type="Label" parent="."]
layout_mode = 0
offset_left = 166.0
offset_right = 316.0
offset_bottom = 32.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Card Type"

[node name="Subtype" type="Label" parent="."]
layout_mode = 0
offset_left = 316.0
offset_right = 466.0
offset_bottom = 32.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Card Subtype"

[node name="Icon" type="Label" parent="."]
layout_mode = 0
offset_left = 416.0
offset_right = 512.0
offset_bottom = 96.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ui4ow")
theme_override_font_sizes/font_size = 64
text = "x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 32.0
offset_right = 416.0
offset_bottom = 96.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Card Description"
autowrap_mode = 2

[connection signal="mouse_entered" from="." to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_mouse_exited"]
